budget-tracker-readme * Add mysql db command manually

--- a/Views/Expenses/Index.cshtml
+++ b/Views/Expenses/Index.cshtml
@@ -8,13 +8,13 @@
     <table class="table table-responsive table-striped">
         <thead>
             <tr class="row">
-                <th class="row-cols-4">
+                <th clas>
                     Description
                 </th>
-                <th class="row-cols-4">
+                <th>
                     Cost
                 </th>
-                <th class="row-cols-4">
+                <th>
                     Date Created
                 </th>
             </tr>
