--- a/Views/Expenses/Index.cshtml
+++ b/Views/Expenses/Index.cshtml
@@ -4,6 +4,13 @@
 @model List<Expense>
 
 <div class="text-center">
+    @if (ViewBag.Alert != "") {
+        <div class="alert alert-primary" role="alert">
+            @ViewBag.Alert
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    }
+
     <h1 class="display-4">Expenses</h1>
     <a class="btn btn-primary float-end" asp-action="Create">New Expense</a>
     <table class="table table-responsive table-striped">
@@ -42,8 +49,8 @@
                                     Actions
                                 </button>
                                 <ul class="dropdown-menu dropdown-menu-start" aria-labelledby="dropdownMenuButton1">
-                                    <li><a class="dropdown-item">Edit</a></li>
-                                    <li><a class="dropdown-item mt-2">Delete</a></li>
+                                    <li><a class="dropdown-item" asp-action="Edit" asp-route-id="@expense.Id">Edit</a></li>
+                                    <li><a class="dropdown-item mt-2" asp-controller="Expenses" asp-action="Delete" asp-route-id="@expense.Id">Delete</a></li>
                                 </ul>
                             </div>
                         </td>
@@ -54,7 +61,7 @@
         <tfoot>
             <tr>
                 <td>Total:</td>
-                <td>@("R"+Model.Sum(x => x.Cost))</td>
+                <td>R@(String.Format("{0:0.00}", Model.Sum(x => x.Cost)))</td>
                 <td colspan="2"></td>
             </tr>
         </tfoot>
