--- a/Views/Expenses/Edit.cshtml
+++ b/Views/Expenses/Edit.cshtml
@@ -11,20 +11,43 @@
     </div>
 }
 
-<h1 class="display-4 text-center">New Expense</h1>
+<div class="container">
+    <div class="border border-secondary border-3 col-12 p-3">
+        <div class="mb-4">
+            <h1 class="display-4">Edit Expense</h1>
+            <a asp-action="Index" class="p-0 btn btn-link text-secondary">&lt; Back To Expenses List</a>
+        </div>
 
-<form asp-action="Edit">
-    @Html.HiddenFor(m => m.Id)
-    @Html.HiddenFor(m => m.DateCreated)
-    <div class="mb-3">
-        <label class="form-label">Expense Description</label>
-        <input asp-for="Description" class="form-control" type="text" placeholder="Description of Expense" value="@Model.Description" />
+        <form asp-controller="Expenses" asp-action="Edit">
+            @Html.HiddenFor(m => m.Id)
+            <div class="mb-3 row">
+                <div class="col-6">
+                    <label class="form-label">Expense Description</label>
+                    <input asp-for="Description" class="form-control" type="text" placeholder="Description of Expense" />
+                </div>
+            </div>
+
+            <div class="mb-3 row">
+                <div class="col-6">
+                    <label class="form-label">Cost</label>
+                    <input asp-for="Cost" class="form-control" type="number" step="any" placeholder="Cost" />
+                </div>
+            </div>
+
+            <div class="mb-3 row">
+                <div class="col-12">
+                    <label class="form-label">Budget Group</label>
+                </div>
+                <div class="col-6">
+                    @Html.DropDownListFor(model => model.BudgetId, ViewBag.Budgets as SelectList, "Budget Period", new { @class = "form-select" })
+                </div>
+            </div>
+
+            <div class="mb-3 row">
+                <div class="col-3">
+                    <button class="btn btn-primary form-control text-center" type="submit">Add Expense</button>
+                </div>
+            </div>
+        </form>
     </div>
-    <div class="mb-3">
-        <label class="form-label">Cost</label>
-        <input asp-for="Cost" class="form-control" type="number" step="any" placeholder="Cost" value="@Model.Cost" />
-    </div>
-    <div>
-        <button class="btn btn-primary form-control" type="submit">Update Expense</button>
-    </div>
-</form>
+</div>
